app/cluster-b/analyzer-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: watson-tone-analyzer
spec:
  hosts:
  - gateway.watsonplatform.net
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
