app/cluster-b/analyzer-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: analyzer
spec:
  gateways:
  - ingress-gateway
  - mesh
  hosts:
  - analyzer.svc.b.remote
  http:
  - route:
    - destination:
        host: analyzer
        port:
          number: 80
      weight: 100
